# MV-DeepSDF

./: .datasources.json  .gitignore  CMakeLists.txt  DeepSDF_only_install.sh  PROJECT_COMPLETION_SUMMARY.md  README.md  hyperparameter_sweep.py  main.cpp  preprocess_data.py  quick_scaling_test.py  reconstruct.py  test_fix.py  test_fixed_model.py  test_latent_scaling.py  train_deep_sdf.py  train_mvdeepsdf_stage2.py
configs/: mvdeepsdf_config.json  mvdeepsdf_stage2_test.json  mvdeepsdf_stage2_train.json  mvdeepsdf_train_split_available.json
data/: dataset.py
deep_sdf/: data.py  mesh.py
examples/cars/: all_instances_fixed.json  specs.json
examples/cars/Reconstructions/2200/Meshes/back for reconstructin /: 02958343_382496958e58e9a0658e57fd275f6bed.ply  02958343_706083fa2a8c2b50bc97decb713a2619.ply  02958343_9497f33086b582b7473f10e6caaeca56.ply  02958343_d32cd105c2dd79259d959a8bee08198a.ply  02958343_e607a20da6c5132dd141480e2c154d3.ply  02958343_fc6f6309eefa5178590462ce3bd1e59f.ply
examples/splits/: deepsdf_test_with_successful_data.json  successful_multisweep_test.json  successful_multisweep_train.json  successful_multisweep_train_clean.json  successful_single_view_test_clean.json  sv2_cars_test_clean.filtered.json
networks/: mv_deepsdf.py
scripts/: evaluate_stage2.py  extract_single_sweeps.py  generate_multi_sweep.py  generate_partial_latents.py  overlay_partial_views.py  visualize_partial_views.py  visualize_single_sweeps.py
src/: PreprocessMesh.cpp  SampleVisibleMeshSurface.cpp  ShaderProgram.cpp  Utils.cpp  Utils.h
